--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 	 <header class="cabecera">
-    	<img src="imagenes/logo.png" alt="Logotipo Resto" id="logotipo">
+    	<img src="logo.png" alt="Logotipo Resto" id="logotipo">
     	<nav class="navbar">
         <ul>
     		<li><a href="index.html">Inicio</a></li>
