--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
       <section  class="carta">
 	      <h1 class="titulo_principal"> Nuestra Carta </h1>
 	      <article class="col-50 col-33">
-	        <img src="imagenes/foto1.jpg" class="img-responsiva">
+	        <img src="foto1.jpg" class="img-responsiva">
 	        <h2>Menu 1</h2>
 	        <p>Pellentesque non justo ultricies, pellentesque urna id, ullamcorper ligula. Maecenas sed metus mi. Vivamus non lectus in risus placerat ultrices ac nec magna. In bibendum semper ligula non rutrum. Sed sapien felis, dignissim vel venenatis ac, dictum ut nisl. Nam orci ipsum, tincidunt sed erat nec, dapibus tincidunt nulla. Morbi pharetra est ut pellentesque tempor. </p>
 	        <h3>$5.000</h3>
 	      </article>
 	      <article class="col-50 col-33">
-	        <img src="imagenes/foto2.jpg" class="img-responsiva">
+	        <img src="foto2.jpg" class="img-responsiva">
 	        <h2>Menu 2</h2>
 	        <p>Quisque facilisis sed justo et bibendum. Sed non diam sed risus faucibus lacinia non quis magna. In tristique porttitor est et consectetur. Nulla fringilla enim nisl, quis hendrerit sem porta ut. Phasellus non rhoncus lorem. Mauris ut tellus bibendum, posuere lectus eget, consectetur risus. Etiam vitae laoreet libero. Aenean vulputate metus ut elit congue rhoncus. </p>
 	        <h3>$5.000</h3>
 	      </article>
 	      <article class="col-50 col-33">
-	        <img src="imagenes/foto3.jpg" class="img-responsiva">
+	        <img src="foto3.jpg" class="img-responsiva">
 	        <h2>Menu 3</h2>
 	        <p>Quisque facilisis sed justo et bibendum. Sed non diam sed risus faucibus lacinia non quis magna. In tristique porttitor est et consectetur. Nulla fringilla enim nisl, quis hendrerit sem porta ut. Phasellus non rhoncus lorem. Mauris ut tellus bibendum, posuere lectus eget, consectetur risus. Etiam vitae laoreet libero. Aenean vulputate metus ut elit congue rhoncus. </p>
 	        <h3>$5.000</h3>
@@ -54,9 +54,9 @@
     <footer class="pie">
     	<p>pie de página, derechos reservados, fechas</p>
         <br>
-            <img src="social-icons/facebook-gray.png" alt="Facebook">
-            <img src="social-icons/twitter-gray.png" alt="twitter">
-            <img src="social-icons/youtube-gray.png" alt="youtube">
+            <img src="facebook-gray.png" alt="Facebook">
+            <img src="twitter-gray.png" alt="twitter">
+            <img src="youtube-gray.png" alt="youtube">
       
     </footer>
 
